# cool_os

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  linker.ld
.cargo/: config.toml
.github/workflows/: ci.yml
disk-image/: Cargo.toml
disk-image/src/: fs_image.rs  main.rs
scripts/: ppm_to_png.py  ppm_visual_assert.py  qemu_hotplug_smoke.py  qemu_smoke.py
src/: abi.rs  accessibility.rs  acpi.rs  allocator.rs  app_lifecycle.rs  app_metadata.rs  ata.rs  boot_splash.rs  boot_watchdog.rs  branding.rs  clipboard.rs  config_store.rs  crashdump.rs  deferred.rs  desktop_settings.rs  device_registry.rs  drivers.rs  elf.rs  event_bus.rs  fat32.rs  font.rs  framebuffer.rs  fs_hardening.rs  gdt.rs  interrupts.rs  jobs.rs  keyboard.rs  klog.rs  main.rs  memory.rs  mouse.rs  net.rs  notifications.rs  packages.rs  pci.rs  process_model.rs  profiler.rs  rtc.rs  scheduler.rs  search_index.rs  (+14 more)
src/apps/: colorpicker.rs  displaysettings.rs  filemanager.rs  mod.rs  personalize.rs  sysmon.rs  terminal.rs  textviewer.rs
src/apps/filemanager/: actions.rs  drawing.rs  layout_hit_test.rs  modals.rs  model.rs
src/usb/: mod.rs  xhci.rs
src/wm/: compositor.rs  compositor.rs.bak  mod.rs  window.rs
userspace/hello/: Cargo.toml  linker.ld
userspace/hello/src/: main.rs
