[package]
name = "cool_os"
version = "0.1.0"
edition = "2021"

[dependencies]
# Feature "map_physical_memory" fixes the missing field error in main.rs
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.4" 
x86_64 = "0.14.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
raw-cpuid = "10.6.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33