[workspace]
# disk-image is intentionally excluded — it is a host-side build tool that
# uses std and must NOT inherit the kernel workspace's x86_64-unknown-none
# target or build-std settings.
exclude = ["disk-image"]
resolver = "2"

[package]
name = "cool_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
font8x8 = { version = "0.2.4", features = ["unicode"], default-features = false }
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
pc-keyboard = "0.6"
linked_list_allocator = "0.9.0"
raw-cpuid = "10.6.0"
