[workspace]

[package]
name = "disk-image"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disk-image"
path = "src/main.rs"

[[bin]]
name = "fs-image"
path = "src/fs_image.rs"

[dependencies]
bootloader = { path = "../vendor/bootloader", default-features = false, features = ["bios"] }
fatfs = "0.3"
